syntax = "proto3";

package DetailPageService;

import   "google/api/annotations.proto";
import   "github.com/transavro/ScheduleService/proto/SchedularService.proto";


service DetailPageService{
    rpc GetDetailInfo(TileInfoRequest) returns (DetailTileInfo){
        option (google.api.http) = {
                post:"/detail/getDetailInfo"
                body: "*"
        };
    }
}

message TileInfoRequest{
    string tileId = 1;
}

message DetailTileInfo{
    string title = 1;
    string synopsis = 2;
    map<string, string> metadata = 3;
    repeated Button button = 4;
    repeated SchedularService.Content contentTile = 5;
    repeated string backDrop = 6;
    repeated string poster = 7;
    repeated string portrait = 8;
}

enum ButtonType{
    LocalApi = 0;
    RemotApi = 1;
}

message Button {
    string title = 1;
    string icon = 2;
    string package = 3;
    string action = 4;
    ButtonType buttonType = 6;
}